final version before reiew

--- a/ANS-winter2014/7Eqn_ANS_2014/7Eqn_ANS_2014.tex
+++ b/ANS-winter2014/7Eqn_ANS_2014/7Eqn_ANS_2014.tex
@@ -210,9 +210,9 @@ where $s_{\alpha,k} = \alpha_k^2/2$ can be interpreted as the entropy function a
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Results and Analysis}
 
-The $1$-D seven-equation model with viscous stabilization is discretized with {\it continuous} finite elements in space and BDF2 in time using the multiphysics framework RELAP7. The resulting nonlinear system of equations at each time step is solved using a Jacobian-free Newton Krylov technique. We present results for a simple system in order to validate our approach that consists of a $1$-D straight pipe of area $A = 10^{-4}$ $m^2$ with a wall heat source (the wall temperature is constant: $T_w = 550$ $K$). The stiffened gas equation of state is used to model the liquid and vapor phases with the parameters taken from \cite{SGEOS}. The static pressure $P=7.1$ $MPa$ is set at the outlet. The volume fraction, the enthalpy and the mass flow rate are specified at the inlet for each phase. The wall friction coefficient is constant and the same for the two phases, $f_w = 4 \times 10^{-2}$. The interfacial area $A_{int}$ is set to a large value to equalize the pressure and velocity of the two phases. The initial conditions are uniform. The geometry is discretized with a uniform mesh of $100$ elements and the code is run $(CFL=100$)  until a steady state is obtained. 
+The $1$-D seven-equation model with viscous stabilization is discretized with {\it continuous} finite elements in space and BDF2 in time using the multiphysics framework RELAP-7. The resulting nonlinear system of equations at each time step is solved using a Jacobian-free Newton Krylov technique. We present one sample result for a 1-D straight pipe of area $A = 10^{-4}$ $m^2$ with a wall heat source (the wall temperature is constant: $T_w = 550$ $K$). The stiffened gas equation of state is used to model the liquid and vapor phases with the parameters taken from \cite{SGEOS} for each phase. A static pressure of $P=7.1$ $MPa$ is set at the outlet. The volume fraction, the enthalpy and the mass flow rate are specified at the inlet for each phase. The wall friction coefficient is constant and the same for the two phases, $f_w = 4 \times 10^{-2}$. The interfacial area $A_{int}$ is set to a large value to equalize the pressure and velocity of the two phases. The initial conditions are uniform. The geometry is discretized with a uniform mesh of 100 elements and the simulation is run with $CFL=100$  until a steady state is obtained. 
 
-The pressure, temperature, velocity, volume fraction and viscosity coefficients profiles are plotted from \fig{fig:pressure} through \fig{fig:viscosity_coeff}. As expected, the liquid and vapor pressure profiles are identical (\fig{fig:pressure}) and decrease through the domain because of the wall friction force. The liquid and velocity profiles are also identical as shown in \fig{fig:velocity} and increase due to the wall friction force and the heat addition. In \fig{fig:temperature}, the liquid and vapor temperature profiles are distinct and have  the same variation: the temperature rises since energy is added to the flow by the wall heat source. The variations of the vapor and liquid volume fractions are opposite: vapor is produced since the liquid temperature is larger than the saturation temperature. All of the profiles are smooth and do not display any unphysical variations: the high-order viscosity coefficients shown in \fig{fig:viscosity_coeff}, $\kappa_{e,k}$ and $\beta_{e,k}$, are well-scale and large enough to stabilize the numerical solution without altering it (only $\beta_{e,liquid}$ is plotted since $\beta_{e,liquid}=\beta_{e,vapor}$). It is also noted the difference of several order of magnitude between the high-order and first-order viscosity coefficients denoted by the subscript $max$. The first-order viscosity coefficients are over-dissipative and ill-scaled in the low Mach regime.
+The pressure, temperature, velocity, volume fraction and viscosity coefficients profiles are plotted from \fig{fig:pressure} through \fig{fig:viscosity_coeff}. As expected, the liquid and vapor pressure profiles are identical (\fig{fig:pressure}) and decrease through the domain because of the wall friction force. The liquid and velocity profiles are also identical as shown in \fig{fig:velocity} and increase due to the wall friction force and the heat addition. In \fig{fig:temperature}, the liquid and vapor temperature profiles are distinct and have  the same variation: the temperature rises since energy is added to the flow by the wall heat source. The variations of the vapor and liquid volume fractions are opposite: vapor is produced since the liquid temperature is larger than the saturation temperature. All of the profiles are smooth and do not display any spurious oscillations: the high-order viscosity coefficients shown in \fig{fig:viscosity_coeff}, $\kappa_{e,k}$ and $\beta_{e,k}$, are well-scaled and large enough to stabilize the numerical solution without altering it (only $\beta_{e,liquid}$ is plotted since $\beta_{e,liquid}=\beta_{e,vapor}$). It is also noted the difference of several order of magnitude between the high-order and first-order viscosity coefficients denoted by the subscript $max$. The first-order viscosity coefficients are over-dissipative and ill-scaled in the low Mach regime \cite{marco_inl_report}.
 %
 \begin{figure}[H]
         \centering
@@ -259,7 +259,7 @@ The pressure, temperature, velocity, volume fraction and viscosity coefficients 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Conclusions}
 
-We have presented an extension of the entropy viscosity method to the $1$-D seven-equation model and applied it to a low-Mach flow case including wall friction and gravity terms, wall heat source and mass and energy transfer between the phases. The stabilization method is capable of stabilizing the numerical solution and the viscosity coefficients are well-scaled. This work will further contribute to the assessment of the stabilization technique for reactor flows in RELAP7.
+We have presented an extension of the entropy viscosity method to the 1-D seven-equation model and applied it to a low-Mach flow case including wall friction and gravity terms, wall heat source and mass and energy transfer between the phases. The stabilization method is capable of stabilizing the numerical solution and the viscosity coefficients are well-scaled. This work will further contribute to the assessment of the stabilization technique for reactor flows in RELAP-7.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %\appendix
