could be a typo: s convex

--- a/low_mach.tex
+++ b/low_mach.tex
@@ -692,7 +692,7 @@ Now that we have determined a scaling for $\Re_\infty$ and $\Re_\infty$, the nor
 %
 \begin{equation}
 \label{eq:norm_relation}
-\kappa_\infty = \frac{ \rho_\infty c_\infty^2 u_\infty L }{ \norm_{P,\infty}^{\kappa} } \, ,
+\kappa_\infty = \frac{ \rho_\infty c_\infty^2 u_\infty L_\infty }{ \norm_{P,\infty}^{\kappa} } \, ,
 \end{equation}
 %
 where $\norm_{P,\infty}$ is the reference far-field quantity for the normalization parameter $\norm_P$. Substituting \eqt{eq:norm_relation} into \eqt{eq:ref_numb} and recalling that the numerical P\'eclet number scales as unity, we obtain:
@@ -940,7 +940,7 @@ liquid water (\sct{sec:liquid_shock})  & 4.4      & 1000                       &
 \end{center}
 \end{table}
 %
-The entropy function for the stiffened gas equation of state is convex and given by
+The entropy function for the stiffened gas equation of state is \tcr{convex} and given by 
 %
 \begin{equation*}
 s = C_v \ln \left( \frac{P+P_\infty}{\rho^{\gamma-1}} \right) ,
